# port-lens

./: Cargo.toml  Makefile  README.md  README_en.md  build.rs  intro.md
.github/workflows/: ci.yml
docs/: prd.md
docs/decisions/: ADR-001-implement-as-rust-cli.md
src/: lib.rs  locale.rs  project_root.rs
src/collectors/: docker.rs  ports.rs  processes.rs
src/commands/: clean.rs  common.rs  inspect.rs  kill.rs  list.rs  mod.rs  port_rows.rs  ps.rs  watch.rs
src/detectors/: framework.rs
src/display/: mod.rs  table.rs  watch.rs
src/fmt/: mod.rs
